Updated index.html set up for business services. Mission moved to about.html. Livestream page adjustments.

--- a/pages/about.html
+++ b/pages/about.html
@@ -180,12 +180,34 @@
 								substantial growth, with over 41 million BTC addresses holding at least $1 worth of
 								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
 
+								<header class="major">
+									<span class="date">OFiDCrypt Mission</span>
+									<h1>Our <br />Mission</h1>
+									<p class="align-center">To be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and
+										applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps,
+										protection
+										and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
+									
+									<p class="align-center">We recommend reviewing our <a href="/index.html#Guide">Quick Start Guide</a> to learn about Solana.</p>
+										
+					<!-- Ad Banner & Header-->
+					<section class="partner-section">
+						<section id="docs-banner" class="ad-banner">
+								<!-- Docs Button -->
+								<div class="image button-image">
+									<a href="/docs/main.html" target="_blank">
+										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
+									</a>
+								</div>
+						</section>
+								</header>
+
 							<!-- Section 2 - Right Image -->
 							<a href="https://www.ofidcrypt.ca/">
 								<span class="image right"><img src="../assets/images/expb.png"
 										alt="e𝕏P Web3™ Logo"></span>
 							</a>
-
+							<h3 style="text-align: right;">Leading Partner Collaborations</h3>
 							<p>By partnering with leading Web3 software developers, our company can subtly introduce
 								people to the
 								nuances of
@@ -230,17 +252,6 @@
 													});
 												  </script>
 												-->
-
-					<!-- Ad Banner & Header-->
-					<section class="partner-section">
-						<section id="docs-banner" class="ad-banner">
-								<!-- Docs Button -->
-								<div class="image button-image">
-									<a href="/docs/main.html" target="_blank">
-										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
-									</a>
-								</div>
-						</section>
 					</section>
 				</div>
 			
