--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -245,7 +245,7 @@
 											<a href="#event-1-desc">More Details</a></span>
 
 											<h1><a href="#table-next-event">Airdrop: Giveaway &<br />
-													OfiD Progress Updates</a></h1>
+													OfiD Updates</a></h1>
 										</header>
 										<section class="livestream" id="latest-event">
 											<div class="stream video main">
