--- a/404.html
+++ b/404.html
@@ -33,26 +33,26 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>e𝕏PB Chart DEX Screener | OFiDCrypt</title>
+	<title>e𝕏PB 404 Page Not Found | OFiDCrypt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
+	<meta name="description" content="Whoops! No Bouncy Ball found here!">
 	<meta name="keywords" content="cryptocurrency, Kin, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="e𝕏PB Chart DEX Screener | OFiDCrypt">
-	<meta property="og:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
+	<meta property="og:title" content="e𝕏PB 404 Page Not Found | OFiDCrypt">
+	<meta property="og:description" content="Whoops! No Bouncy Ball found here!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com/chart">
+	<meta property="og:url" content="https://www.ofidcrypt.com/404">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="e𝕏PB Chart DEX Screener | OFiDCrypt">
-	<meta name="twitter:description" content="Tune in to OFiDCrypt to check the price of the e𝕏PB Token.">
+	<meta name="twitter:title" content="e𝕏PB 404 Page Not Found | OFiDCrypt">
+	<meta name="twitter:description" content="Whoops! No Bouncy Ball found here!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/chart">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/404">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -132,13 +132,9 @@
 
 		<!-- Main -->
 		<div id="main">
-		
-			<!-- Chart -->
-			<section id="expb-chart">
-				<div id="dexscreener-embed"><iframe
-						src="https://dexscreener.com/solana/4Kf9mFXh7mksX3vSV8Cy2xRW8iRKwHgz3cqCGPk58XkH?embed=1&loadChartSettings=0&chartLeftToolbar=0&loadChartSettings=0&chartDefaultOnMobile=1&chartTheme=dark&theme=dark&chartStyle=0&chartType=usd&interval=15"></iframe>
+				<div class="image-custom">
+					<img src="../assets/images/404.PNG" alt="404: Page Not Found Art">
 				</div>
-			</section>
 		</div>
 
 		<!-- Footer -->
