--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -147,8 +147,8 @@
 								<h1>Code <br />
 									Wallet</h1>
 								<p>Unlock a whole new world of web3 experiences through this community partner app by Code Inc. Gain access
-									to features such as claimable cash links and a range od services built on Code SDK. Click the "Go to Cashlinks"
-									button at the <a href="#get-ahead-section">end of the page</a> to see if there's any up for grabs!
+									to features such as claimable cash links and a range of services built on Code SDK. Click the "Go to Cashlinks"
+									button at the <a href="#get-ahead-section">end of the page</a> to see if there are any up for grabs!
 								</p>
 							</header>
 						
