Minor tweaks to 404 error contact page.

--- a/404.html
+++ b/404.html
@@ -141,7 +141,7 @@
 		<footer id="footer">
 			<section>
 				<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-					<h2 class="centered-heading">Contact Us</h2>
+					<h2 class="centered-heading">Report Broken Link</h2>
 					<div class="fields">
 						<div class="field">
 							<label for="name">Name</label>
@@ -152,7 +152,7 @@
 							<input type="email" name="email" id="email" required>
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
+							<label for="message">Copy & Paste Url</label>
 							<textarea name="message" id="message" rows="3" required></textarea>
 						</div>
 					</div>
