--- a/cashlinks.html
+++ b/cashlinks.html
@@ -200,7 +200,7 @@
 			<footer id="footer">
 				<section>
 					<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-						<h2 class="centered-heading">Enter Promotion</h2>
+						<h2 class="centered-heading">Contact Us</h2>
 						<div class="fields">
 							<div class="field">
 								<label for="name">Name</label>
