Adjusted robots.txt do not crawl 404.html. Updated canonical.

--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
 	<!-- Canonical Preferred URL -->
-	<link rel="canonical" href="https://www.ofidcrypt.com/chart">
+	<link rel="canonical" href="https://www.ofidcrypt.com/404">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/assets/css/main.css">
