Updated OFiDKid profile page with details of baby Tokin. Formatting adjustments.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 										<div class="quick-start-content">
 											<h3 class="quick-start-title">Grow Your Audience</h3>
 											<p class="align-center">Flex Rates · Reward Users · e𝕏PB Easy Pay · Collaborate</p> <button class="button"><a
-													href="#">Promote Now</a></button>
+													href="#">Coming Soon</a></button>
 										</div>
 								</article>
 
@@ -237,7 +237,7 @@
 												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-trending.jpg"
+								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-ball.png"
 											alt="eXPB Icon"></span>
 											<div class="quick-start-content">
 												<h3 class="quick-start-title">Get Bouncy Ball</h3>
