--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
 							<h3>Social</h3>
 							<ul class="icons alt">
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+								<li><a href="https://www.tiktok.com/@OFiDCrypt" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</section>
 					</section>
