Updated social buttons type and order to include TikTok and LinkedIn. Other small formatting changers.

--- a/community.html
+++ b/community.html
@@ -124,14 +124,10 @@
 						<img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 					</a>
 				</li>
-				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
-				</li>
-				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span
-							class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
-							class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span
-							class="label">GitHub</span></a></li>
+					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+					<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+					<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			</ul>
 		</nav>
 
@@ -164,7 +160,7 @@
 					<article class="product-section">
 						<div class="product-wrapper">
 							<div class="product-content">
-								<span class="image left"><img src="assets/images/bouncy-ball-dispense.jpg" alt="Bouncy Ball & Ramp Img"></span>
+								<span class="image left"><img src="assets/images/bouncy-ball-dispense-2.png" alt="Bouncy Ball & Ramp Img"></span>
 								<h2 style="text-align: left;">OFiDCrypt Community</h2>
 								<p>We're dedicated to making crypto and web3 more friendly and fun for everyone, from newbies to
 									seasoned enthusiasts. In our community space, we emphasize engaging with each other, sharing ideas, and
@@ -226,7 +222,7 @@
 								<span class="image right"><img src="../assets/images/ofid-exp-social-card-01.png"
 										alt="eXP Brand Card COlour Splash"></span>
 							</a>
-							<h3 style="text-align: left;">Your Platform. Your Choice.</h3>
+							<h3 style="text-align: left;">Your Choice of Platform</h3>
 							<p>Join like-minded individuals within the OFiDCrypt Community on 𝕏,
 								Telegram, Flipchat and more! Participate in promotions and live
 								events with e𝕏PB Bouncy Ball & Your Solana Wallet.
@@ -248,7 +244,7 @@
 								style="max-width: 100%; height: auto;">
 						</a>
 						<p>Buster says you can also explore our <a href="/pages/affiliate.html">Partner Connections</a>
-							to discover additional communities and services. "That's an order!"</p>
+							to discover additional communities and services!</p>
 					</div>
 				</section>
 			</div>
@@ -315,14 +311,10 @@
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
-									class="label">X</span></a></li>
-						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
-									class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span
-									class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events"
-								class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -332,8 +324,8 @@
 		<div id="copyright">
 			<ul>
 				<li><a href="/community.html">Community</a></li>
-				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
