--- a/explore.html
+++ b/explore.html
@@ -122,14 +122,11 @@
 						<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
 						  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 						</a>
-					  </li>
-					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-					<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span
-								class="label">Facebook</span></a></li>
-					<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
-								class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span
-								class="label">GitHub</span></a></li>
+					</li>
+					  <li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+					  <li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+					  <li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+					  <li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 				</ul>
 			</nav>
 					<!-- Main -->
@@ -149,8 +146,8 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Web3 <br /> Discovery</h1>
-								<p>Check out these <a href="#apps-list">top players</a> leading innovation in the Web3 space, or explore our library of
-									<a href="#article-featured">knowledge articles</a>
+								<p>Check out these <a href="#apps-list">Top Players</a> leading innovation in the Web3 space, or explore our library of
+									<a href="#article-featured">Knowledge Articles</a>
 									written and published by OFiDCrypt.</p>
 							</header>
 					
@@ -159,7 +156,7 @@
 							<header>
 								<h2>Featured App</h2>
 
-								<p>Get started with <b>Phantom Wallet</b> to buy <b>Solana</b> and <b>Swap for e𝕏PB</b> in minutes!</p>
+								<p>Get started with <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</p>
 							</header>
 
 							<!-- Quick Start: Featured -->
@@ -216,11 +213,11 @@
 								<h2>e𝕏Plore More</h2>
 								<!-- Section Description -->
 								<p class="align-center">Find more Web3 apps to try by visiting this <a
-										href="https://ofidcrypt.ca/try-services-using-code-wallet-uztuawi">Blog Post</a> for partner services; hosted by Hvr Social
-									Browser.
+										href="https://ofidcrypt.ca/try-services-using-code-wallet-uztuawi">Blog Post</a> for partner services; hosted by
+									Hvr Browser.
 								</p>
 							</header>
-							</article>
+						</article>
 				
 				<!-- Main -->
 				<div id="main">
@@ -392,9 +389,9 @@
 							<h3>Social</h3>
 							<ul class="icons alt">
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+								<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</section>
 					</section>
@@ -404,8 +401,8 @@
 				<div id="copyright">
 				<ul>
 					<li><a href="/community.html">Community</a></li>
-					<li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
+					<li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/pages/about.html">About</a></li>
 				</ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
