--- a/chart.html
+++ b/chart.html
@@ -119,14 +119,11 @@
 					<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
 					  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 					</a>
-				  </li>
-				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span
-							class="label">Facebook</span></a></li>
-				<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
-							class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span
-							class="label">GitHub</span></a></li>
+				</li>
+				  <li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+				  <li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+				  <li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+				  <li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 			</ul>
 		</nav>
 
@@ -203,12 +200,9 @@
 					<h3>Social</h3>
 					<ul class="icons alt">
 						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
-									class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span
-									class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events"
-								class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -218,8 +212,8 @@
 		<div id="copyright">
 			<ul>
 				<li><a href="/community.html">Community</a></li>
-				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/docs/main.html">Docs</a></li>
+				<li><a href="/pages/affiliate.html">Partners</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
