--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 								  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 								</a>
 							  </li>
-							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-							<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							  <li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
+							  <li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+							  <li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+							  <li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 					</nav>
 
@@ -223,7 +223,7 @@
 							<header>
 								<h2>Jump Ahead with e𝕏P Web3™</h2>
 
-								<p>Get started with <b>Phantom Wallet</b> to buy <b>Solana</b> and <b>Swap for e𝕏PB Bouncy Ball</b> in minutes! See this <a
+								<p>Get started with <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes! See this <a
 										href="#">video guide</a>
 									to find out how.</p>
 							</header>
@@ -276,7 +276,12 @@
 								
 								<!-- Page Button Style -->
 								<style>
+									body.dark-mode {
+										--button-bg-color: #111416;
+									}
+								
 									.button {
+										background-color: var(--button-bg-color);
 										display: inline-block;
 										border-radius: 20px;
 										text-decoration: none;
@@ -288,6 +293,7 @@
 										transition: background-color 0.3s ease;
 									}
 								</style>
+
 								<!-- Docs Button & Header-->
 								<section class="partner-section">
 									<section id="docs-banner" class="ad-banner">
@@ -369,7 +375,7 @@
 							<h3>Social</h3>
 							<ul class="icons alt">
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-								<li><a href="https://www.tiktok.com/@OFiDCrypt" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+								<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
@@ -381,8 +387,8 @@
 				<div id="copyright">
 				<ul>
 					<li><a href="/community.html">Community</a></li>
-					<li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/docs/main.html">Docs</a></li>
+					<li><a href="/pages/affiliate.html">Partners</a></li>
 					<li><a href="/pages/about.html">About</a></li>
 				</ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
