Various formatting changes and media updates for eXP Learn in prep to move articles to OFiDCrypt.ca. Added nav buttons, adjusted padding and margins.

--- a/kincommunity.html
+++ b/kincommunity.html
@@ -44,7 +44,7 @@
 	<meta property="og:title" content="The Kin Community Connection | OFiDCrypt">
 	<meta property="og:description" content="Join the Kin community to share experiences and learn about their project, vision and values.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com/community">
+	<meta property="og:url" content="https://www.ofidcrypt.com/kincommunity">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
@@ -52,7 +52,7 @@
 	<meta name="twitter:title" content="The Kin Community Connection | OFiDCrypt">
 	<meta name="twitter:description" content="Join the Kin community to share experiences and learn about their project, vision and values.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/community">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/kincommunity">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -200,7 +200,7 @@
 					<span class="date">Kin Knowledge</span>
 					<h2>Kin Update<br />
 						Archive</h2>
-					<p>Research our <a href="#pagination-controls-top">library of Kin news</a> and developments, 
+					<p>Research our <a href="#pagination-controls-top">Library of Kin News</a> 
 						written and published by the owner of the Kin Community Telegram.
 					</p>
 				</header>
@@ -237,8 +237,8 @@
 						<article>
 							<header>
 								<span class="date">Try OFiD Articles</span>
-								<h2><a href="/explore.html#article-featured">e𝕏P WEB3™
-										Learn<br /> News & Articles</a></h2>
+								<h2><a href="/explore.html#article-featured">e𝕏P
+										Learn™<br /> News & Articles</a></h2>
 							</header>
 							<a href="/explore.html#article-featured"
 								class="image fit"><img src="assets/images/bg-learn-01.webp"
@@ -438,7 +438,7 @@
 
 				let url;
 				if (pageNumber === '1') {
-					url = 'community.html';
+					url = 'kincommunity.html';
 				} else {
 					url = `monthly-posts-page${pageNumber}.html`;
 				}
