--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -148,49 +148,64 @@
 						Partners</h1>
                 </header>
 
-                <!-- Affiliate Partners Section -->
-                <section class="partner-section">
-                    <header>
-                        <!-- Partner Name -->
-						<p style="text-align: center;">We choose a varied range of products based on different marketing styles. Our members can
-							discover products organically from trusted sources such as blogs, social media, and videos. These partners share
+				<!-- Affiliate Partners Section -->
+				<section class="partner-section">
+					<header>
+						<!-- Partner Name -->
+						<p style="text-align: center;">We choose a varied range of products based on different marketing styles. Our
+							members can
+							discover products organically from trusted sources such as blogs, social media, and videos. These partners
+							share
 							genuine insights, building trust and enhancing the web3 experience.</p>
 
                     </header>
 
-                    <!-- Product 1 -->
-                    <article class="product-section">
-                        <div class="product-wrapper">
-                            <div class="product-content">
-                                <a href="https://www.ofidcrypt.ca/">
+					<!-- Product 1 -->
+					<article class="product-section">
+						<div class="product-wrapper">
+							<div class="product-content">
+								<a href="https://www.ofidcrypt.ca/">
 									<span class="image left"><img src="../assets/images/hvr-logo03.png" alt="Hvr App Colorful Logo"></span>
-								</a>								
-                                <h3 style="text-align: left;">Hvr Browser | Where Sites Are Social</h3>
-                                <p>Hvr instantly impressed us with its groundbreaking concept: Comment on, share, and tag people on any page across the
-									internet! This innovation unleashes boundless opportunities for discussion all over the web, enabling you to form
-									new connections and share your thoughts seamlessly as you browse.</p>
-                            </div>
-                        </div>
-                    </article>
-
-                    <!-- Product 2 -->
-                    <article class="product-section">
-                        <div class="product-wrapper">
-                            <div class="product-content">
-								<a href="../kincommunity.html">
-                                	<span class="image right"><img src="../assets/images/logokin02.jpg" alt="Kin On Solana Logo Image"></span>
 								</a>
-                                <h3 style="text-align: right;">The Kin Community</h3>
-                                <p>Kin is a cryptocurrency that follows Satoshi Nakamoto's vision of a direct,
+								<h3 style="text-align: left;">Hvr Browser | Where Sites Are Social</h3>
+								<p>Hvr instantly impressed us with its groundbreaking concept: Comment on, share, and tag people on any page
+									across the
+									internet! This innovation unleashes boundless opportunities for discussion all over the web, enabling
+									you to form
+									new connections and share your thoughts seamlessly as you browse.</p>
+					
+								<!-- Partner Nav Button 1 -->
+								<div>
+									<button class="button"><a href="https://hvr.world">Visit Site Partner</a></button>
+								</div>
+							</div>
+						</div>
+					</article>
+
+					<!-- Product 2 -->
+					<article class="product-section">
+						<div class="product-wrapper">
+							<div class="product-content">
+								<a href="../kincommunity.html">
+									<span class="image right"><img src="../assets/images/logokin02.jpg"
+											alt="Kin On Solana Logo Image"></span>
+								</a>
+								<h3 style="text-align: right;">The Kin Community</h3>
+								<p>Kin is a cryptocurrency that follows Satoshi Nakamoto's vision of a direct,
 									peer-to-peer payment system. Unlike traditional money where banks or services are
 									the go-between, Kin allows people to send and receive payments directly from each
 									other. It's designed to be user-friendly, making transactions as simple as sending a
 									message, but with the added security of blockchain technology. With Kin, you can pay
 									for services, tip content creators, or just transfer money to friends without any
 									middleman. Kin was introduced in 2017 as an ICO (Initial Coin Offering) within Kik Messenger.</p>
-                            </div>
-                        </div>
-                    </article>
+
+								<!-- Partner Nav Button 2 -->
+								<div>
+									<button class="button"><a href="../kincommunity.html">Visit Community</a></button>
+								</div>
+							</div>
+						</div>
+					</article>
 
 					<!-- Product 3 -->
 					<article class="product-section">
@@ -200,9 +215,16 @@
 									<span class="image left"><img src="../assets/images/logocode01.jpg" alt="Code Wallet Logo"></span>
 								</a>
 								<h3 style="text-align: left;">Code Wallet | Take Control of Your Money</h3>
-								<p>Code Wallet is a community partner developing applications with Kin. Code Inc's Code SDK is open source, allowing
-									third-party developers to integrate Kin and micropayments into their software. Code Inc is one of two companies
+								<p>Code Wallet is a community partner developing applications with Kin. Code Inc's Code SDK is open source,
+									allowing
+									third-party developers to integrate Kin and micropayments into their software. Code Inc is one of two
+									companies
 									under the same owner working on Kin-related apps.</p>
+					
+								<!-- Partner Nav Button 3 -->
+								<div>
+									<button class="button"><a href="vipwithcode.html">Explore Code</a></button>
+								</div>
 							</div>
 						</div>
 					</article>
