--- a/explore.html
+++ b/explore.html
@@ -146,9 +146,14 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Web3 <br /> Discovery</h1>
-								<p>Check out these <a href="#apps-list">Top Players</a> leading innovation in the Web3 space, or explore our library of
-									<a href="#article-featured">Knowledge Articles</a>
-									written and published by OFiDCrypt.</p>
+								<p>Check out Apps from Leading Innovators in the Web3 Space; or Explore our Library of
+									Knowledge Articles, written and published by OFiDCrypt.</p>
+
+								<!-- Apps & Learn Buttons -->
+								<div>
+									<button class="button"><a href="#apps-list">Explore Apps</a></button>
+									<button class="button"><a href="#article-featured">Read Articles</a></button>
+								</div>
 							</header>
 					
 						<!-- Quick Start Section -->
@@ -156,16 +161,16 @@
 							<header>
 								<h2>Featured App</h2>
 
-								<p>Get started with <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</p>
+								<p>With our uniquie App Discovery Model, you can <b>Earn Rewards</b> by getting started with featured apps, coming soon to OFiDCrypt!</p>
 							</header>
 
 							<!-- Quick Start: Featured -->
 							<article class="quick-start-item quick-start-featured"> <span class="image left"><img
-										src="/assets/images/300x300-phantom.png" alt="Wallet Icon"></span>
+										src="/assets/images/hvr-logo03.png" alt="Hvr Logo"></span>
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Get your Wallet</h3>
-									<p class="align-center">By Phantom Technologies Inc</p> <button class="button"><a
-											href="https://phantom.com/download">Download</a></button>
+									<h3 class="quick-start-title">Hvr Browser</h3>
+									<p class="align-center">By Hvr Technologies Inc</p> <button class="button"><a
+											href="https://hvr.world/">Get Hvr</a></button>
 								</div>
 							</article>
 
@@ -177,12 +182,12 @@
 
 							<!-- Quick Start - App 1 -->
 							<div class="quick-start-items">
-								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/hvr-logo03.png"
-											alt="Hvr Logo"></span>
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/300x300-phantom.png"
+											alt="Phantom Logo"></span>
 									<div class="quick-start-content">
-										<h3 class="quick-start-title">Hvr Browser</h3>
-										<p class="align-center">By Hvr Technologies Inc</p>
-										<button class="button"><a href="https://hvr.world/">Get Hvr</a></button>
+										<h3 class="quick-start-title">Get your Wallet</h3>
+										<p class="align-center">By Phantom Technologies Inc</p>
+										<button class="button"><a href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
 							
@@ -191,7 +196,7 @@
 								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/logocode01.jpg"
 											alt="Wallet Icon"></span>
 									<div class="quick-start-content">
-										<h3 class="quick-start-title">Get Code Wallet</h3>
+										<h3 class="quick-start-title">Code Wallet</h3>
 										<p class="align-center">By Code Inc</p> <button class="button"><a href="/pages/vipwithcode.html">More
 												Details</a></button>
 									</div>
@@ -201,7 +206,7 @@
 								<article class="quick-start-item"> <span class="image left"><img
 											src="/assets/images/flipchat-logo.png" alt="Flipchat OFiD Icon"></span>
 									<div class="quick-start-content">
-										<h3 class="quick-start-title">Flipchat</h3>
+										<h3 class="quick-start-title">Flipchat Messenger</h3>
 										<p class="align-center">By Flipchat Inc</p> <button class="button"><a
 												href="https://ofidcrypt.ca/flipchat-by-code-inc">More Details</a></button>
 									</div>
@@ -224,7 +229,7 @@
 					<!-- Featured Post -->
 					<article id="article-featured" class="post featured">
 						<header class="major">
-							<span class="date">Articles & Featured</span>
+							<span class="date">e𝕏P Learn & Featured</span>
 							<h2>Learn With <br />Articles</h2>
 							<p>Check out our <b>Featured Article</b> hosted by our Sitepartner <b>Hvr Social Browser</b>. Keep scrolling to explore more articles in our library! 
 							</p>
@@ -257,13 +262,13 @@
 										<span class="date">October 11, 2024</span>
 										<h2><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency">01 A Beginners Introduction<br /> to Crypto</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency" class="image fit"><img src="assets/images/pic06.jpg" alt="Article Title: A Beginners Introduction to Cryptocurrency" /></a>
+									<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency" class="image fit"><img src="assets/images/article-cover-01-beginners.PNG" alt="Article Title: A Beginners Introduction to Cryptocurrency" /></a>
 									<p>Learning the absolute basics from someone other than huge corporations can remove bias. 
 										It is important to our brand that we provide the necessary knowledge for people to make 
 										their own decisions! Enjoy this fresh take on an intro to crypto.</p>
 									<ul class="actions special">
 										<li><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency"
-											class="button">Preview</a></li>
+											class="button">View Article</a></li>
 									</ul>
 								</article>
 
@@ -272,13 +277,13 @@
 										<span class="date">October 12, 2024</span>
 										<h2><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins">02 The Risks of<br /> Meme Coins</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins" class="image fit"><img src="assets/images/pic07.jpg" alt="Article Title: The Risks of Meme Coins" /></a>
+									<a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins" class="image fit"><img src="assets/images/article-cover-02-memecoin.jpg" alt="Article Title: The Risks of Meme Coins" /></a>
 									<p>Many investment opportunities can exist in crypto, and it's easy to see how it can become overwhelming. The trick is knowing what 
 										to look for to spot a project’s intent. By project, I mean a crypto coin or token. Some cryptocurrencies are not controlled by 
 										any single entity, known as decentralization. Some are, and now you'll be equipped to spot them.</p>
 									<ul class="actions special">
 										<li><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins"
-											class="button">Preview</a></li>
+											class="button">View Article</a></li>
 									</ul>
 								</article>
 
@@ -287,13 +292,13 @@
 										<span class="date">October 21, 2024</span>
 										<h2><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers">03 Crypto 101:<br /> Fundamentals</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/pic04.jpg" alt="Article Title: Crypto 101: Fundamentals & Breaking Barriers" /></a>
+									<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers" class="image fit"><img src="assets/images/article-cover-03-crypto101.jpg" alt="Article Title: Crypto 101: Fundamentals & Breaking Barriers" /></a>
 									<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how this feeling is 
 										derived from what's "unknown". When you start breaking down what crypto actually is and how it compares to 
 										current financial systems, there really should be no barriers left to hold you back.</p>
 									<ul class="actions special">
 										<li><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers"
-											class="button">Preview</a></li>
+											class="button">View Article</a></li>
 									</ul>
 								</article>
 
@@ -302,13 +307,13 @@
 										<span class="date">October 21, 2104</span>
 										<h2><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token">04 Learn About a Crypto Project: Kin Token</a></h2>
 									</header>
-									<a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="image fit"><img src="assets/images/pic05.jpg" alt="Article Title: Learn About a Crypto Project: Kin Token" /></a>
+									<a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token" class="image fit"><img src="assets/images/article-cover-04-kin.jpg" alt="Article Title: Learn About a Crypto Project: Kin Token" /></a>
 									<p>Learn about a new cryptocurrency called Kin, and how it has the potential to replicate the success and growth of Bitcoin. 
 										It enables you to be able to sign in to a new era of online services where you can interact and make purchases in just a tap! 
 										You can  also send money to friends, aligning with the vision of decentralized, permissionless transactions.</p>
 									<ul class="actions special">
 										<li><a href="https://pennypost.co/p/723123949/04-learn-about-a-crypto-project-kin-token"
-											class="button">Preview</a></li>
+											class="button">View Article</a></li>
 									</ul>
 								</article>
 							</section>
