--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -107,7 +107,7 @@
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../explore.html">e𝕏P Web3™</a></li>
 				<li><a href="../community.html">Community</a></li>
-				<li class="active"><a href="livestream.html">e𝕏P Stream™</a></li>
+				<li class="active"><a href="livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="../ofidkid.html">The OFiD Kid</a></li>
 				<li><a href="about.html">About Us</a></li>
 			</ul>
