Formatting adjustments, added explore button class and ofidkid character profile classes.

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 								}
 							</style>
 
-							<!-- Docs Button & Header-->
+							<!-- Chart Button & Header-->
 							<section class="partner-section">
 								<section id="docs-banner" class="ad-banner">
 									<!-- Chart Button -->
