--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -229,6 +229,26 @@
 						</div>
 					</article>
 
+					<!-- Page Button Style -->
+					<style>
+						body.dark-mode {
+							--button-bg-color: #111416;
+						}
+				
+						.button {
+							background-color: var(--button-bg-color);
+							border-radius: 20px;
+							text-decoration: none;
+							border: none;
+							cursor: pointer;
+							text-align: center;
+							margin-top: 0rem;
+							/* This property centers the text */
+							transition: background-color 0.3s ease;
+							float: left;
+						}
+					</style>
+
                     <!-- More About Our Partners -->
                     <footer>
 							<h2 style="text-align: center;">More About Our Partners</h2>
