--- a/explore.html
+++ b/explore.html
@@ -278,17 +278,17 @@
 							<header>
 								<span class="date">October 11, 2024</span>
 								<h2><a
-										href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency">01
+										href="https://ofidcrypt.ca/article-a-beginners-intro-to-cryptocurrency">01
 										A Beginners Introduction<br /> to Crypto</a></h2>
 							</header>
-							<a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency"
+							<a href="https://ofidcrypt.ca/article-a-beginners-intro-to-cryptocurrency"
 								class="image fit"><img src="assets/images/article-cover-01-beginners.PNG"
 									alt="Article Title: A Beginners Introduction to Cryptocurrency" /></a>
 							<p>Learning the absolute basics from someone other than huge corporations can remove bias.
 								It is important to our brand that we provide the necessary knowledge for people to make
 								their own decisions! Enjoy this fresh take on an intro to crypto.</p>
 							<ul class="actions special">
-								<li><a href="https://pennypost.co/p/676825480/01-a-beginners-introduction-to-cryptocurrency"
+								<li><a href="https://ofidcrypt.ca/article-a-beginners-intro-to-cryptocurrency"
 										class="button">View Article</a></li>
 							</ul>
 						</article>
