--- a/explore.html
+++ b/explore.html
@@ -82,7 +82,7 @@
 	<!-- JavaScript Libraries -->
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	<script src="/assets/js/browser.min.js" defer></script>
-	<script src="/assets/js/main.js" defer></script>
+	<script src="assets/js/main.js" defer></script>
 
 	<!-- Meta Language -->
 	<meta http-equiv='content-language' content='en-gb'>
@@ -160,9 +160,9 @@
 						Knowledge Articles, written and published by OFiDCrypt.</p>
 
 					<!-- Apps & Learn Buttons -->
-					<div class="explore-button-container">
-						<button class="explore-button"><a href="#apps-list">Explore Apps</a></button>
-						<button class="explore-button"><a href="#article-featured">Read Articles</a></button>
+					<div class="round-button-container">
+						<button class="round-button"><a href="#apps-list">Explore Apps</a></button>
+						<button class="round-button"><a href="#article-featured">Read Articles</a></button>
 					</div>
 
 
@@ -182,7 +182,7 @@
 								src="/assets/images/hvr-logo03.png" alt="Hvr Logo"></span>
 						<div class="quick-start-content">
 							<h3 class="quick-start-title">Hvr Browser</h3>
-							<p class="align-center">By Hvr Technologies Inc</p> <button class="button"><a
+							<p class="align-center">By Hvr Technologies Inc</p> <button class="round-button"><a
 									href="https://hvr.world/">Get Hvr</a></button>
 						</div>
 					</article>
@@ -200,7 +200,7 @@
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Get your Wallet</h3>
 								<p class="align-center">By Phantom Technologies Inc</p>
-								<button class="button"><a href="https://phantom.com/download">Download</a></button>
+								<button class="round-button"><a href="https://phantom.com/download">Download</a></button>
 							</div>
 						</article>
 
@@ -210,7 +210,7 @@
 									src="/assets/images/logocode01.jpg" alt="Wallet Icon"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Code Wallet</h3>
-								<p class="align-center">By Code Inc</p> <button class="button"><a
+								<p class="align-center">By Code Inc</p> <button class="round-button"><a
 										href="/pages/vipwithcode.html">More
 										Details</a></button>
 							</div>
@@ -221,7 +221,7 @@
 									src="/assets/images/flipchat-logo.png" alt="Flipchat OFiD Icon"></span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Flipchat Messenger</h3>
-								<p class="align-center">By Flipchat Inc</p> <button class="button"><a
+								<p class="align-center">By Flipchat Inc</p> <button class="round-button"><a
 										href="https://ofidcrypt.ca/flipchat-by-code-inc">More Details</a></button>
 							</div>
 						</article>
@@ -231,11 +231,8 @@
 				<header id="Guide">
 					<h2>e𝕏Plore More</h2>
 					<!-- Section Description -->
-					<p class="align-center">Find more Web3 apps to try by visiting this <a
-							href="https://ofidcrypt.ca/try-services-using-code-wallet-uztuawi">Blog Post</a> for partner
-						services; hosted by
-						Hvr Browser.
-					</p>
+					<p class="align-center">Join us on <a href="https://t.me/OFiDBall">Telegram</a> which is itself a progressive and
+						evolving web3 messaging platform with new opportunities for members!</p>
 				</header>
 			</article>
 
@@ -246,8 +243,7 @@
 					<header class="major">
 						<span class="date">e𝕏P Learn & Featured</span>
 						<h2>Learn With <br />Articles</h2>
-						<p>Check out our <b>Featured Article</b> hosted by our Sitepartner <b>Hvr Social Browser</b>.
-							Keep scrolling to explore more articles in our library!
+						<p>Check out our <b>Featured Article</b> or keep scrolling to explore more content in our library!
 						</p>
 					</header>
 					<a href="https://ofidcrypt.ca/ep-learn-what-is-solana" class="image fit"><img
@@ -636,12 +632,11 @@
 		});
 	</script>
 
-	<!-- Link to non-critical JavaScript files -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-</body>
-
+		<!-- Link to non-critical JavaScript files -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+	</body>
 </html>
