--- a/pages/about.html
+++ b/pages/about.html
@@ -126,10 +126,14 @@
 						<img src="../assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 					</a>
 				</li>
-					<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-					<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
-					<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
+				</li>
+				<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+							class="label">TikTok</span></a></li>
+				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
 			</ul>
 		</nav>
 
@@ -176,25 +180,23 @@
 								substantial growth, with over 41 million BTC addresses holding at least $1 worth of
 								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
 
-								<header class="major">
-									<span class="date">OFiDCrypt Mission</span>
-									<h1>Our <br />Mission</h1>
-									<p class="align-center">To be the leading identity and movement accelerating mainstream Web3 adoption, unifying people and
-										applications through a simple digital wallet hub and partner platforms. We empower peer-to-peer swaps,
-										protection
-										and earning of assets, envisioning a self-sustaining autonomous ecosystem, guided by the people.</p>
-										
-					<!-- Ad Banner & Header-->
-					<section class="partner-section">
-						<section id="docs-banner" class="ad-banner">
-								<!-- Docs Button -->
-								<div class="image button-image">
-									<a href="/docs/main.html" target="_blank">
-										<img src="../assets/images/button-see-the-docs.png" alt="Login Button Image for Code Wallet" />
-									</a>
-								</div>
-						</section>
-								</header>
+							<!-- Mission Statement -->
+							<section class="quick-start-section">
+								<article class="quick-start-item quick-start-featured">
+
+									<!-- Mission Content -->
+									<div class="quick-start-content">
+										<h2 class="quick-start-title">Our Mission</h2>
+										<p class="align-center">To be the leading identity and movement accelerating
+											mainstream Web3 adoption,
+											unifying people and applications through a simple digital wallet hub and
+											partner platforms. We empower
+											peer-to-peer swaps, protection and earning of assets, envisioning a
+											self-sustaining autonomous
+											ecosystem, guided by the people.</p>
+									</div>
+								</article>
+							</section>
 
 							<!-- Section 2 - Right Image -->
 							<a href="https://www.ofidcrypt.ca/">
@@ -246,9 +248,9 @@
 													});
 												  </script>
 												-->
-					</section>
-				</div>
-			
+			</section>
+		</div>
+
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
@@ -311,10 +313,14 @@
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
-						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
+									class="label">X</span></a></li>
+						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+									class="label">TikTok</span></a></li>
+						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
+									class="label">Facebook</span></a></li>
+						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</section>
 			</section>
