Updated link for article 02 moved to Hvr. Fixed broken smooth jump link on index and formatting of mismatched button on ofidkid.html.

--- a/explore.html
+++ b/explore.html
@@ -292,10 +292,10 @@
 						<article>
 							<header>
 								<span class="date">October 12, 2024</span>
-								<h2><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins">02 The Risks
+								<h2><a href="https://ofidcrypt.ca/exp-learntm-the-risks-of-meme-coins">02 The Risks
 										of<br /> Meme Coins</a></h2>
 							</header>
-							<a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins" class="image fit"><img
+							<a href="https://ofidcrypt.ca/exp-learntm-the-risks-of-meme-coins" class="image fit"><img
 									src="assets/images/article-cover-02-memecoin.jpg"
 									alt="Article Title: The Risks of Meme Coins" /></a>
 							<p>Many investment opportunities can exist in crypto, and it's easy to see how it can become
@@ -305,7 +305,7 @@
 								any single entity, known as decentralization. Some are, and now you'll be equipped to
 								spot them.</p>
 							<ul class="actions special">
-								<li><a href="https://pennypost.co/p/282953050/02-the-risks-of-meme-coins"
+								<li><a href="https://ofidcrypt.ca/exp-learntm-the-risks-of-meme-coins"
 										class="button">View Article</a></li>
 							</ul>
 						</article>
