--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 								</section>
 
-								<p class="align-center">To fast-track and get started with a portfolio, please review our <a href="/index.html#Guide">Quick
+								<p class="align-center">To fast-track and get started with a portfolio, please review our <a href="#Guide">Quick
 										Start Guide</a></p>
 							</header>
 					
