--- a/ofidkid.html
+++ b/ofidkid.html
@@ -260,7 +260,7 @@
 				
 							<!-- Social Nav Button 2 -->
 							<div>
-								<button class="button-round"><a href="https://ofidcrypt.ca/new-ofid-bouncy-ball-epb">Explore Bouncy
+								<button class="round-button"><a href="https://ofidcrypt.ca/new-ofid-bouncy-ball-epb">Explore Bouncy
 										Ball</a></button>
 							</div>
 						</div>
