--- a/pages/about.html
+++ b/pages/about.html
@@ -178,7 +178,9 @@
 								to reach $162.84 billion by 2027, highlighting its growing significance. Additionally,
 								Bitcoin adoption has seen
 								substantial growth, with over 41 million BTC addresses holding at least $1 worth of
-								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>.</p>
+								Bitcoin<a href="https://www.tastycrypto.com/blog/bitcoin-adoption/">2</a>. As of 2025, around 5% of the global
+								population has entered the cryptocurrency market. With foundations in utility and integration in future financial
+								systems, this leaves an untapped 95% of the global population as potential demand.</p>
 
 							<!-- Mission Statement -->
 							<section class="quick-start-section">
