Update 404 page art.

--- a/404.html
+++ b/404.html
@@ -130,7 +130,7 @@
 		<!-- Main -->
 		<div id="main">
 				<div class="image-custom">
-					<img src="../assets/images/404.PNG" alt="404: Page Not Found Art">
+					<img src="../assets/images/404-2.jpg" alt="404: Page Not Found Art">
 				</div>
 		</div>
 
