Updated 404 page image and header logo.

--- a/404.html
+++ b/404.html
@@ -90,7 +90,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/bouncy-ball-300.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
@@ -130,7 +130,7 @@
 		<!-- Main -->
 		<div id="main">
 				<div class="image-custom">
-					<img src="../assets/images/404-2.jpg" alt="404: Page Not Found Art">
+					<img src="../assets/images/404-3.jpg" alt="404: Page Not Found Art">
 				</div>
 		</div>
 
