Updated contact labels and added href to 404 page.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -275,14 +275,14 @@
 						</section>
 						<section>
 							<h3>Telegram</h3>
-							<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+							<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
 						</section>
 						<!-- Hvr -->
 						<section>
 							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
 								<img src="../assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
 							</a>
-							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt</a></p>
+							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
 						</section>	
 						<section>
 							<h3>Social</h3>
