--- a/404.html
+++ b/404.html
@@ -129,9 +129,11 @@
 
 		<!-- Main -->
 		<div id="main">
-				<div class="image-custom">
+			<div class="image-custom">
+				<a href="/index.html">
 					<img src="../assets/images/404-3.jpg" alt="404: Page Not Found Art">
-				</div>
+				</a>
+			</div>
 		</div>
 
 		<!-- Footer -->
@@ -183,14 +185,14 @@
 				</section>
 				<section>
 					<h3>Telegram</h3>
-					<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+					<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
 				</section>
 						<!-- Hvr -->
 						<section>
 							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
 								<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
 							</a>
-							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt</a></p>
+							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
 						</section>	
 				<section>
 					<h3>Social</h3>
