--- a/community.html
+++ b/community.html
@@ -298,7 +298,7 @@
 				</section>
 				<section>
 					<h3>Telegram</h3>
-					<p><a href="https://t.me/OFiDCrypt">@OFiDCrypt</a></p>
+					<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
 				</section>
 				<!-- Hvr -->
 				<section>
@@ -306,7 +306,7 @@
 						<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img"
 							class="custom-site-icon-contact">
 					</a>
-					<p><a href="https://www.ofidcrypt.ca">OFiDCrypt</a></p>
+					<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
 				</section>
 				<section>
 					<h3>Social</h3>
